2006-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Makefile.am:
  - More now-unnecessary output filtering removed
2006-08-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Finally resolved Doxygen problems!
  - Corrected prepared-statement execution example
 include/pqxx/except.hxx:
  - too_many_connections is a broken_connection, not an insufficient_resources
  - New undefined_table class (too useful not to have)
 include/pqxx/subtransaction.hxx:
  - Documented class
 src/result.cxx:
  - Recognize undefined_table error
2006-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Doxyfile.in:
  - Include libpqxx version number
  - Suppress unneeded output
  - Ignore PQXX_LIBEXPORT and PQXX_PRIVATE
 doc/Makefile.am:
  - No longer need to suppress unnecessary Doxygen output using grep
 include/pqxx/pipeline.hxx, src/connection.cxx, src/connection_base.cxx,
 src/cursor.cxx, src/dbtransaction.cxx, src/except.cxx, src/largeobject.cxx,
 src/pipeline.cxx, src/prepared_statement.cxx, src/result.cxx,
 src/robusttransaction.cxx, src/subtransaction.cxx, src/tablereader.cxx,
 src/tablestream.cxx, src/tablewriter.cxx, src/transaction.cxx,
 src/transaction_base.cxx:
  - Qualified parameter types identically between declarations and definitions
  - Works around Doxygen problem
 include/pqxx/transactor.hxx:
  - connection_base::perform() was documented in two places
2006-08-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/trigger.hxx:
  - Forbid copy construction and copy assignment (thanks Bart Samwel)
2006-08-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, config/sample-headers/libpq/7.4,
 config/sample-headers/libpq/8.0, config/sample-headers/libpq/8.1,
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Allow server version to be queried
  - Allow protocol version to be queried
  - Compatibility fix: check for "std" namespace and gcc 3.4
 include/pqxx/util.hxx: